web/heatmap.css
/* 
This file is part of the Review Heatmap add-on for Anki

Custom Heatmap CSS

Copyright: (c) 2016-2018 Glutanimate <https://glutanimate.com/>
License: GNU AGPLv3 <https://www.gnu.org/licenses/agpl.html>
*/

/* Special classes:
"rh-anki-20": Set when run on Anki 2.0.x
"rh-platform-mac": Set when run on macOS
"rh-platform-win": Set when run on Windows
"rh-platform-lin": Set when run on Linux
"rh-theme-olive", "rh-theme-lime", "rh-theme-ice",
"rh-theme-magenta", "rh-theme-flame": Set when respective theme active
"rh-mode-year": Set when calendar set to year mode
"rh-mode-month": Set when calendar set to months mode
"rh-disable-stats": Set when streak stats disabled
"rh-disable-heatmap": Set when heatmap disabled
"night_mode": Set when night mode active (provided by Night Mode add-on)
*/

/* General layout */
/* ################################################################### */

.rh-container {
    margin-top: 1em;
}

.heatmap {
    display:inline-block;
}
.heatmap-controls {
    margin-bottom: 0;
}

/* Heatmap graph adjustments */
/* ################################################################### */

.cal-heatmap-container .graph {
    font-family: unset;
}
.graph-label {
    fill: #808080;
}

/* Graph rects */
.cal-heatmap-container rect.highlight-now {
    stroke: black;
}
.cal-heatmap-container rect.highlight {
    stroke: #E9002E;
}
.cal-heatmap-container .graph-rect {
    fill: #eaeaea;
}
.night_mode .cal-heatmap-container .graph-rect {
    fill: #222222;
}

/* Heatmap hover tooltip */
/* ################################################################### */

.ch-tooltip {
    color: rgb(240, 240, 240);
    animation: 0.5s ease 0s normal forwards 1 fadein;
    -webkit-animation: 0.5s ease 0s normal forwards 1 fadein;
}
/* Delay tooltip using fadein */
@keyframes fadein {
    0% { opacity:0; }
    66% { opacity:0; }
    100% { opacity:0.9; }
}
@-webkit-keyframes fadein {
    0% { opacity:0; }
    66% { opacity:0; }
    100% { opacity:0.9; }
}

/* Heatmap button area */
/* ################################################################### */
.alignleft {
    float: left;
    width:33.33333%;
    text-align:left;
}
.aligncenter {
    float: left;
    width:33.33333%;
    text-align:center;
}
.alignright {
    float: left;
    width:33.33333%;
    text-align:right;
}

/* Heatmap buttons */
/* ################################################################### */

/* Regular buttons */
.hm-btn {
    height: 100%;
    display: inline-block;
    cursor: pointer;
    background: #e6e6e6;
    color: #808080;
    padding: 2px 8px;
    border-radius: 3px;
    margin-left: 2px;
    text-decoration: none;
    user-select: none;
    vertical-align: center;
}
.hm-btn:hover {
    background: #bfbfbf;
}
.hm-btn:active {
    background: #000;
}
.night_mode .hm-btn {
    background-color: #313d45;
}
.night_mode .hm-btn:hover {
    background-color: #374f5b;
}
.night_mode .hm-btn:active {
    background-color: #433376;
}


/* Options button */
.opts-btn {
    padding: 2px 4px;
}
.opts-btn:hover {
    background: #bfbfbf;
}
.opts-btn>img {
    position:relative;
    top: calc(50% - 12px);
    height: 10px;
    width: 10px;
}

/* Heatmap activity type widget */
/* ################################################################### */
.hm-sel {
    display: inline-block;
    height: 100%;
    padding: 4px 8px;
    font-size: 80%;
    cursor: pointer;
    color: #808080;
    border-radius: 3px;
    user-select: none;
    border: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    background: url(qrc:/review_heatmap/icons/down.svg) 96% / 10% no-repeat #e6e6e6;
}
select.hm-sel:hover {
    background: url(qrc:/review_heatmap/icons/down.svg) 96% / 10% no-repeat #bfbfbf;
}
select.hm-sel:active, select.hm-sel:focus {
    background: url(qrc:/review_heatmap/icons/down.svg) 96% / 10% no-repeat #e6e6e6;
}

/* Workaround for background images not working on 2.0: */
.rh-anki-20 .hm-sel {
    background: #e6e6e6;
}
.rh-anki-20 select.hm-sel:hover {
    background: #bfbfbf;
}
.rh-anki-20 select.hm-sel:active, select.hm-sel:focus {
    background: #e6e6e6;
}


/* Streak stats */
/* ################################################################### */

/* TODO: investigate why we had two copies of these */
.streak {margin-top: 0.5em;}
.streak-info {
    margin-left: 1em;
}
.sstats {
    font-weight: bold;
    color: #E6E6E6;
}


/* Color themes */
/* ################################################################### */


/* FORECAST RECT COLORS */
/*
- same for every theme 
- reverse order because of negative value workaround 
*/
.cal-heatmap-container .q1{fill: #525252}
.cal-heatmap-container .q2{fill: #616161}
.cal-heatmap-container .q3{fill: #707070}
.cal-heatmap-container .q4{fill: #7F7F7F}
.cal-heatmap-container .q5{fill: #8E8E8E}
.cal-heatmap-container .q6{fill: #9D9D9D}
.cal-heatmap-container .q7{fill: #ACACAC}
.cal-heatmap-container .q8{fill: #BBBBBB}
.cal-heatmap-container .q9{fill: #CACACA}
.cal-heatmap-container .q10{fill: #D9D9D9}

.night_mode .cal-heatmap-container .q1{fill: #5d5f5f}
.night_mode .cal-heatmap-container .q2{fill: #585a5a}
.night_mode .cal-heatmap-container .q3{fill: #535555}
.night_mode .cal-heatmap-container .q4{fill: #4e5050}
.night_mode .cal-heatmap-container .q5{fill: #494b4b}
.night_mode .cal-heatmap-container .q6{fill: #444646}
.night_mode .cal-heatmap-container .q7{fill: #3f4141}
.night_mode .cal-heatmap-container .q8{fill: #3a3c3c}
.night_mode .cal-heatmap-container .q9{fill: #353737}
.night_mode .cal-heatmap-container .q10{fill: #313232}

/* REVIEW HISTORY COLORS */
/*
- different between each theme
*/

/* olive */
.rh-theme-olive .cal-heatmap-container .q11{fill: #dae289}
.rh-theme-olive .cal-heatmap-container .q12{fill: #bbd179}
.rh-theme-olive .cal-heatmap-container .q13{fill: #9cc069}
.rh-theme-olive .cal-heatmap-container .q14{fill: #8ab45d}
.rh-theme-olive .cal-heatmap-container .q15{fill: #78a851}
/* ... */

